<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_doma_store">Welcome to Doma Store</string>
    <string name="to_read_instructions_click">To read the instructions please click the button</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_a">"a) give notice to the other party or parties to such Transferred Contract that Buyer is Seller’s subcontractor, sublessee or agent with respect thereto and that all further payments, notices and other communications with respect thereto shall be directed to Buyer; "</string>
    <string name="go_to_shoe_list">Go to shoe list</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="details">Details</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="shoe">shoe</string>
    <string name="company">Company</string>
    <string name="size">224.8</string>
    <string name="description">Description</string>

</resources>
